--- a/web/index.html
+++ b/web/index.html
@@ -28,8 +28,64 @@
 
   <title>the_dealership</title>
   <link rel="manifest" href="manifest.json">
+
+
+
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-analytics.js"></script>  -->
+
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+
 </head>
 <body>
+<script>
+
+const firebaseConfig = {
+
+  apiKey: "AIzaSyBEdrfRGqF-spsLPyLrNJtrHJsLnu6lLVs",
+
+  authDomain: "thedealership-a0ac9.firebaseapp.com",
+
+  databaseURL: "https://thedealership-a0ac9-default-rtdb.firebaseio.com",
+
+  projectId: "thedealership-a0ac9",
+
+  storageBucket: "thedealership-a0ac9.appspot.com",
+
+  messagingSenderId: "829773441286",
+
+  appId: "1:829773441286:web:3b62d908c935717a49d687",
+
+  measurementId: "G-NJGN0C0FHT"
+
+};
+
+
+// Initialize Firebase
+
+const app = initializeApp(firebaseConfig);
+
+const analytics = getAnalytics(app);
+
+
+</script>
+
+
+
+
+
+
+
+
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
